--- a/src/slides/00-intro/00-who-are-we.mdx
+++ b/src/slides/00-intro/00-who-are-we.mdx
@@ -1,14 +1,9 @@
 import PersonList from '../../components/person-list';
 import Person from '../../components/person';
-import dustin from './images/dustin-schau.jpeg';
-import travis from './images/travis-martensen.jpeg';
+import scott from './images/scott-poulin.jpeg';
 
-## Who are these guys?
-
-<!-- TODO: replace with your images/info -->
-<!-- .mdx is used so we can import React components -->
+## Who am I?
 
 <PersonList>
-  <Person avatar={dustin} name="Dustin Schau" twitter="schaudustin" title="Principal Technologist" key="dustin" />
-  <Person avatar={travis} name="Travis Martensen" twitter="tmartensen" title="Chief Technologist" key="Travis" />
+  <Person avatar={scott} name="Scott Wethor-Poulin" twitter="scottrpoulin" title="Senior Consultant at Object Partners Inc" key="scott" />
 </PersonList>
